--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 className="h1color">Welcome to the our site</h1>
+        <h1 class="h1color">Welcome to the our site</h1>
         {% if request.user.is_authenticated %}
             <div class="button-container">
                 <button class="button" onclick="redirectTo('create_test')" id="createTestButton">Create Test</button>
