--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot_password</title>
-    <link rel="stylesheet" href="{% static 'css/forgot_password.css' %}">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
-<body style="background-image: url('{% static 'css/register.jpg' %}'); background-size: cover;">
+<body style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT81kmFNrw8tl4UW2Rdpfw_8_d0H9-Ri555wA&usqp=CAU'); background-size: cover;">
 <div class="container">
     <h2>Create a New Post</h2>
     <form method="post" enctype="multipart/form-data" class="post-form">
