--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 {%load static%}
-<html>
+<html lang="en">
 <head>
-    <title>ChangePassword</title>
-    <link rel="stylesheet" href="{% static 'css/change_password.css' %}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Password Change</title>
+    <link rel="stylesheet" href="{%static 'css/change_password.css'%}">
 </head>
 <body>
-    <h1>Change_password</h1>
-    <p>Your email has been successfully sent.</p>
-    <h2>please try enter your secret token</h2>
-        <div class="token-secret">
-            <form method="post">
-                {%csrf_token%}
-                <div class="form-group">
-                    <label for="id_password" style="color:black;">NewPassword</label>
-                    <input type="password" name="password" id="id_password" class="password-field">
-                </div>
-                    <button class="token-button" type="submit">ChangePassword</button>
-            </form>
-        </div>
+{% if request.user.is_authenticated %}
+    <div class="container">
+        <h2>Password Change</h2>
+        <p>Please enter your old password, for security’s sake, and then enter your new password twice so we can verify you typed it in correctly.</p>
+
+        <form method="post">
+            {% csrf_token %}
+
+            <div class="form-group">
+                <label for="old_password">Old password:</label>
+                <input type="password" id="old_password" name="old_password" required>
+            </div>
+
+            <div class="form-group">
+                <label for="new_password">New password:</label>
+                <input type="password" id="new_password" name="new_password" required>
+                <p class="password-requirements">Your password can’t be too similar to your other personal information.<br>Your password must contain at least 8 characters.<br>Your password can’t be a commonly used password.<br>Your password can’t be entirely numeric.</p>
+            </div>
+
+            <div class="form-group">
+                <label for="confirm_password">New password confirmation:</label>
+                <input type="password" id="confirm_password" name="confirm_password" required>
+            </div>
+            <button type="submit">Change Password</button>
+        </form>
+    </div>
+{%else%}
+    please login
+{%endif%}
 </body>
-</html
+</html>
