--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{%load static%}
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,31 +9,39 @@
 </head>
 <body style="background-image: url('{% static 'css/register.jpg' %}'); background-size: cover;">
 
-    <h2>Welcome to Your Profile, {{ request.user.username }}!</h2>
+    <header>
+        <h2>Welcome to Your Profile, {{ request.user.username }}!</h2>
 
- {% if user_posts %}
-    <ul>
-        {% for post in user_posts %}
-            <li>
-                <h4><a href="{% url 'edds' post.slug %}">{{ post.title }}</a></h4>
-                <p>{{ post.description|slice:":20" }}...</p>
-                <img src="{{ post.picture.url }}" alt="Post Image" style="width: 400px; height: auto;">
-                <p><a href="{% url 'posts' post.id post.slug %}">Published: {{ post.publish }}</a>
-                    <button type="button" class="deletebtn"><a href="{% url 'delete_post' post.id post.slug %}" >Delete</a></button>
-                    <button type="button" class="editpost"><a href=" {% url 'edit_post' post.id post.slug %}">EditPost</a></button>
-                </p>
-                <p>
-                    <button type="button" class="sharepost"><a href="{% url 'share_post' post.id post.slug %}"><bold>SharePOST</bold></a></button>
-                </p>
-            </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <p><h1>You have no posts😕.</h1></p>
-    {% endif %}
+        <!-- Search Form -->
+        <form method="GET" class="input1" >
+            {{ form.as_p }}
+            <button type="submit">Searching</button>
+        </form>
+    </header>
 
-
+    <main>
+        {% if user_posts %}
+        <ul class="post-list">
+            {% for post in user_posts %}
+                <li class="post-item">
+                    <h4><a href="{% url 'edds' post.slug %}">{{ post.title }}</a></h4>
+                    <div class="post-description">{{ post.description|slice:":20" }}...</div>
+                    <img src="{{ post.picture.url }}" alt="Post Image" class="post-image">
+                    <div class="post-details">
+                        <p><a href="{% url 'posts' post.id post.slug %}">Published: {{ post.publish }}</a></p>
+                        <button type="button" class="deletebtn"><a href="{% url 'delete_post' post.id post.slug %}" >Delete</a></button>
+                        <button type="button" class="editpost"><a href="{% url 'edit_post' post.id post.slug %}">Edit Post</a></button>
+                        <button type="button" class="sharepost"><a href="{% url 'share_post' post.id post.slug %}"><strong>Share Post</strong></a></button>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+        <p class="no-posts">You have no posts 😕.</p>
+        {% endif %}
+    </main>
 </body>
 </html>
+
 
 
