--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,16 +7,16 @@
     <title>Forgot_password</title>
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
-<body style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT81kmFNrw8tl4UW2Rdpfw_8_d0H9-Ri555wA&usqp=CAU'); background-size: cover;">
-<div class="container">
-    <h2>Create a New Post</h2>
+<body>
+<div class="container" >
+    <h2 style="text-align:center ;">Create a New Post</h2>
     <form method="post" enctype="multipart/form-data" class="post-form">
         {% csrf_token %}
         <div class="form-group">
             <label for="{{ form.title.id_for_label }}">Title</label>
             {{ form.title }}
         </div>
-        <div class="form-group">
+        <div class="form-group" >
             <label for="{{ form.picture.id_for_label }}">Picture</label>
             {{ form.picture }}
         </div>
