--- a/templates/redirects.html
+++ b/templates/redirects.html
@@ -5,6 +5,9 @@
     <title>GOPROFILE</title>
 </head>
 <body>
-    <h1>Succsesfully deleted this post <a href="{% url 'profile' %}"> Profile</a ></h1>
+    <h1 style="text-align:center; color:rgb(9, 9, 9)" >Succsesfully deleted this post </h1>
+
+    <button style="top: 10%; padding: 10px; background-color: blue; border-radius: 7px; margin-left: 47%; "><a style="color: aliceblue; " href="{% url 'profile' %}"> Back to profile</a ></button>
+        
 </body>
 </html>
