--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,5 +1,5 @@
 .container {
-    max-width: 600px;
+    max-width: 650px;
     margin: 0 auto;
     padding: 20px;
     background-color: #f5f5f5;
@@ -23,10 +23,10 @@ label {
 input[type="text"],
 input[type="file"],
 textarea {
-    width: 100%;
+    width: 97%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 7px;
 }
 
 button[type="submit"] {
@@ -41,4 +41,7 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
     background-color: #0056b3;
+}
+.form-group:hover{
+    cursor: pointer;
 }
